crates/quant-pivot-models/tests/snapshots/report_payload_snapshots__recommendation_operator_only_snapshot.snap
---
source: crates/quant-pivot-models/tests/report_payload_snapshots.rs
expression: recommendation_operator_only()
---
{
  "recommendation_id": "310ca8eb-39f7-5004-8c58-90f227dea8f6",
  "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
  "report_route_run_id": "639686eb-df5e-577e-9b5d-72a4440d37ba",
  "portfolio_plan_id": "e62df386-c19a-5c0d-9da3-02c7b4619335",
  "economic_tier_id": "f1410d94-d7c2-51a8-92fe-52471f81a9ed",
  "rank": 1,
  "route": "pooled",
  "market_id": "0xmarketA",
  "event_id": "evt-1",
  "token_id": "token-0xmarketA",
  "outcome_side": "yes",
  "economics": {
    "profit_probability_bps": "6200",
    "nominal_expected_net_usd": "55",
    "robust_expected_net_usd": "42",
    "max_loss_usd": "120",
    "cvar_contribution_usd": "40",
    "capital_occupancy_usd_hours": "12000",
    "marginal_portfolio_value_usd": "38"
  },
  "economic_tier": {
    "economic_tier_id": "f1410d94-d7c2-51a8-92fe-52471f81a9ed",
    "report_route_run_id": "639686eb-df5e-577e-9b5d-72a4440d37ba",
    "candidate_id": "993b8c6e-cdd6-5a17-9c5c-249e59714896",
    "tier_ordinal": 1,
    "route": "pooled",
    "market_id": "0xmarketA",
    "event_id": "evt-1",
    "category": "politics",
    "token_id": "token-0xmarketA",
    "outcome_side": "yes",
    "entry_execution": {
      "kind": "passive",
      "requested_shares": "581.39534883720930232558139535",
      "limit_price": "0.43",
      "decision_at": "2023-11-14T22:13:20Z",
      "good_til_secs": 3600,
      "hard_reserved_cash_usd": "250",
      "expected_filled_shares": "581.39534883720930232558139535",
      "full_fill_cost": {
        "principal_usd": "250",
        "venue_fee_usd": "0",
        "builder_fee_usd": "0",
        "cash_outlay_usd": "250"
      },
      "fill_distribution": {
        "sample_count": 100,
        "source_evidence_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
        "states": [
          {
            "kind": "full_fill",
            "probability_bps": 10000,
            "fill_ratio_bps": 10000,
            "fill_latency_ms": 1000,
            "post_fill_markout_bps": "0"
          }
        ]
      },
      "maker_rebate_terms": {
        "state": "passive_no_program",
        "terms_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
        "available_at": "2023-11-14T22:13:20Z"
      },
      "full_fill_maker_rebate_accrual_usd": "0",
      "expected_maker_rebate_accrual_usd": "0",
      "objective_maker_rebate_usd": "0",
      "maker_rebate_objective_status": {
        "state": "no_program"
      },
      "maker_rebate_valuation": {
        "as_of": "2023-11-14T22:13:20Z",
        "health": "unavailable",
        "program_day_baselines": [],
        "payout_threshold_usd": "1",
        "delay_basis": {
          "kind": "conservative_fallback",
          "lag_from_program_close_secs": 172800
        },
        "evidence_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
      },
      "visible_liquidity_usd": "5000"
    },
    "profit_probability_lower_bps": 5800,
    "probability_interval_width_bps": 800,
    "scenario_cashflows": [
      {
        "scenario_index": 0,
        "entry_execution": {
          "kind": "passive_full_fill",
          "fill_latency_ms": 1000,
          "post_fill_markout_bps": "0"
        },
        "filled_shares": "581.39534883720930232558139535",
        "immediate_cash_outlay_usd": "250",
        "discounted_exit_cash_usd": "340",
        "maker_rebate_accrual_usd": "0",
        "objective_maker_rebate_usd": "0",
        "maker_rebate_program_date": null,
        "maker_rebate_program_day_baseline_usd": "0",
        "maker_rebate_program_day_total_usd": "0",
        "maker_rebate_credit_status": "no_accrual",
        "maker_rebate_expected_by": null,
        "capital_cost_usd": "0",
        "capital_occupancy": [
          {
            "locked_cash_usd": "250",
            "duration_secs": 86400
          }
        ],
        "discounted_net_usd": "90",
        "risk_net_usd": "90"
      },
      {
        "scenario_index": 1,
        "entry_execution": {
          "kind": "passive_full_fill",
          "fill_latency_ms": 1000,
          "post_fill_markout_bps": "0"
        },
        "filled_shares": "581.39534883720930232558139535",
        "immediate_cash_outlay_usd": "250",
        "discounted_exit_cash_usd": "130",
        "maker_rebate_accrual_usd": "0",
        "objective_maker_rebate_usd": "0",
        "maker_rebate_program_date": null,
        "maker_rebate_program_day_baseline_usd": "0",
        "maker_rebate_program_day_total_usd": "0",
        "maker_rebate_credit_status": "no_accrual",
        "maker_rebate_expected_by": null,
        "capital_cost_usd": "0",
        "capital_occupancy": [
          {
            "locked_cash_usd": "250",
            "duration_secs": 86400
          }
        ],
        "discounted_net_usd": "-120",
        "risk_net_usd": "-120"
      }
    ],
    "hard_reservation_envelope": [
      {
        "end_secs": 86400,
        "reserved_cash_usd": "250"
      }
    ],
    "economics": {
      "profit_probability_bps": "6200",
      "nominal_expected_net_usd": "55",
      "robust_expected_net_usd": "42",
      "max_loss_usd": "120",
      "cvar_contribution_usd": "40",
      "capital_occupancy_usd_hours": "12000",
      "marginal_portfolio_value_usd": "38"
    },
    "lineage_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
  },
  "identity": {
    "category": "politics",
    "question": "Will the event resolve Yes?",
    "outcome_name": "Yes"
  },
  "market_context": {
    "best_bid": "0.41",
    "best_ask": "0.43",
    "mid_price": "0.42",
    "spread_bps": "50",
    "depth_usd": "5000",
    "volume_24h_usd": "10000",
    "book_age_ms": 500,
    "time_to_resolution_secs": 86400,
    "market_status": "active",
    "neg_risk": false,
    "tick_size": "0.01",
    "fee_rate": null
  },
  "trade_plan": {
    "policy": {
      "kind": "trade_policy",
      "artifact_id": "a8f80211-bf62-5e7b-acd9-54e24dfe89df",
      "artifact_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
      "cohort_index": 0,
      "cohort_key": {
        "profile_ref": {
          "id": "pooled_1h_control",
          "version": 5,
          "content_hash": "blake3:c758bfc3d6307f58aea8db2b153f7cf120cb1e29584c9d0c3465241e248be2f3"
        },
        "category": "politics",
        "horizon_secs": 86400,
        "entry_route": "aggressive",
        "entry_price_min": "0.01",
        "entry_price_max": "0.99",
        "cash_budget_tier": "250",
        "liquidity": {
          "methodology_id": "fixture-v1",
          "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "bucket_id": "fixture"
        },
        "volatility": {
          "methodology_id": "fixture-v1",
          "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "bucket_id": "fixture"
        }
      }
    },
    "entry": {
      "condition": {
        "kind": "immediate"
      },
      "order_policy": {
        "kind": "passive",
        "limit_price": "0.43",
        "post_only": true
      },
      "max_slippage_bps": "50",
      "valid_from": "2023-11-14T22:13:20Z",
      "valid_until": "2023-11-14T23:13:20Z",
      "min_depth_usd": "100",
      "max_book_age_ms": 2000,
      "cancel_if_not_triggered": true,
      "entry_reason": "limit entry at edge"
    },
    "sizing": {
      "economic_tier_id": "c41cf043-099a-5ad9-ba89-8d152d27b9e8",
      "requested_shares": "581.39534883720930232558139535",
      "expected_filled_shares": "581.39534883720930232558139535",
      "hard_reserved_cash_usd": "250",
      "immediate_fee_usd": "0",
      "expected_maker_rebate_accrual_usd": "0",
      "objective_maker_rebate_usd": "0",
      "maker_rebate_objective_status": {
        "state": "no_program"
      },
      "rebate_delay_basis": null,
      "rebate_valuation_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
      "maker_rebate_terms": {
        "state": "passive_no_program",
        "terms_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
        "available_at": "2023-11-14T22:13:20Z"
      },
      "reference_entry_price": "0.43",
      "portfolio_weight_pct": "0.05",
      "market_exposure_after_usd": "250",
      "event_exposure_after_usd": "250",
      "category_exposure_after_usd": "250",
      "route_exposure_after_usd": "250",
      "capital_occupancy_usd_hours": "12000",
      "sizing_reason": "selected executable tier from the exact global MILP"
    },
    "exit": {
      "kind": "executable",
      "plan": {
        "take_profit_price": "0.7",
        "take_profit_pct": "0.6",
        "stop_loss_price": "0.3",
        "stop_loss_pct": "0.3",
        "time_exit_at": null,
        "max_hold_secs": 86400,
        "scale_out_targets": [],
        "trailing_stop": null,
        "thesis_invalidation": {
          "min_score_retention": "0.6",
          "min_expected_return_bps": "0",
          "require_route_gate_eligibility": true
        },
        "opportunistic_exit": {
          "min_confidence": "0.65",
          "min_expected_alpha_bps": "50",
          "min_p_exit_better": "0.5",
          "max_cumulative_exit_pct": "1",
          "min_incremental_exit_pct": "0.1"
        },
        "settlement_mode": "hold_to_resolution",
        "redeem_policy": "manual",
        "manual_review_at": null,
        "exit_reason": "tp/sl"
      }
    },
    "risk_envelope": {
      "max_loss_usd": "120",
      "max_slippage_bps": "50",
      "max_position_usd": "500",
      "max_market_exposure_usd": "500",
      "max_event_exposure_usd": "750",
      "max_category_exposure_usd": "1500",
      "max_route_exposure_usd": "1500",
      "cvar_contribution_usd": "40",
      "portfolio_cvar_cap_usd": "500",
      "maximum_scenario_loss_cap_usd": "750",
      "risk_notes": [
        "thin book"
      ],
      "envelope_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
    }
  },
  "factor_breakdown": [
    {
      "factor_name": "liquidity_depth",
      "family": "liquidity",
      "value_state": "scored",
      "raw_value": "1234.5",
      "normalized_score": "0.8",
      "normalization_source": "cross_section",
      "indeterminate_reason": null,
      "weight": "0.4",
      "contribution": "0.32",
      "confidence": "0.75",
      "direction": "positive",
      "explanation": "deep book",
      "source_refs": [
        "feature:liquidity_depth"
      ]
    }
  ],
  "execution_eligibility": {
    "ceiling": "operator_approval",
    "blockers": [
      "automation_cap_exceeded"
    ],
    "policy_binding": null
  },
  "valid_from": "2023-11-14T22:13:20Z",
  "valid_until": "2023-11-15T22:13:20Z",
  "status": "published",
  "created_at": "2023-11-14T22:13:20Z",
  "report_status": "published",
  "active_order_intent_id": null
}
