crates/quant-pivot-models/tests/snapshots/report_payload_snapshots__recommendation_partial_exits_snapshot.snap
---
source: crates/quant-pivot-models/tests/report_payload_snapshots.rs
expression: recommendation_partial_exits()
---
{
  "recommendation_id": "03a07bf0-e600-5905-8094-739a6c74ca4c",
  "recommendation_report_id": "f7a59e75-1560-57c2-abc0-972ac075aef0",
  "report_route_run_id": "639686eb-df5e-577e-9b5d-72a4440d37ba",
  "portfolio_plan_id": "e62df386-c19a-5c0d-9da3-02c7b4619335",
  "economic_tier_id": "a7cf2d76-de7f-5b41-b0db-f10807fb2be0",
  "rank": 1,
  "route": "pooled",
  "market_id": "0xmarketA",
  "event_id": "evt-1",
  "token_id": "token-0xmarketA",
  "outcome_side": "yes",
  "economics": {
    "profit_probability_bps": "6200",
    "nominal_expected_net_usd": "55",
    "robust_expected_net_usd": "42",
    "max_loss_usd": "120",
    "cvar_contribution_usd": "40",
    "capital_occupancy_usd_hours": "12000",
    "marginal_portfolio_value_usd": "38"
  },
  "economic_tier": {
    "economic_tier_id": "a7cf2d76-de7f-5b41-b0db-f10807fb2be0",
    "report_route_run_id": "639686eb-df5e-577e-9b5d-72a4440d37ba",
    "candidate_id": "3e0e46c4-1802-5944-a76c-cf5b8e0da748",
    "tier_ordinal": 1,
    "route": "pooled",
    "market_id": "0xmarketA",
    "event_id": "evt-1",
    "category": "politics",
    "token_id": "token-0xmarketA",
    "outcome_side": "yes",
    "shares": "500",
    "entry": {
      "notional_usd": "250",
      "entry_vwap": "0.43",
      "fee_usd": "1.25",
      "slippage_usd": "2.50",
      "visible_liquidity_usd": "5000"
    },
    "profit_probability_lower_bps": 5800,
    "probability_interval_width_bps": 800,
    "scenario_cashflows": [
      {
        "scenario_index": 0,
        "discounted_net_usd": "90"
      },
      {
        "scenario_index": 1,
        "discounted_net_usd": "-120"
      }
    ],
    "capital_occupancy": [
      {
        "end_secs": 86400,
        "locked_usd": "250"
      }
    ],
    "economics": {
      "profit_probability_bps": "6200",
      "nominal_expected_net_usd": "55",
      "robust_expected_net_usd": "42",
      "max_loss_usd": "120",
      "cvar_contribution_usd": "40",
      "capital_occupancy_usd_hours": "12000",
      "marginal_portfolio_value_usd": "38"
    },
    "lineage_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
  },
  "identity": {
    "category": "politics",
    "question": "Will the event resolve Yes?",
    "outcome_name": "Yes"
  },
  "market_context": {
    "best_bid": "0.41",
    "best_ask": "0.43",
    "mid_price": "0.42",
    "spread_bps": "50",
    "depth_usd": "5000",
    "volume_24h_usd": "10000",
    "book_age_ms": 500,
    "time_to_resolution_secs": 86400,
    "market_status": "active",
    "neg_risk": false,
    "tick_size": "0.01",
    "fee_rate": null
  },
  "trade_plan": {
    "policy": {
      "artifact_id": "a8f80211-bf62-5e7b-acd9-54e24dfe89df",
      "artifact_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
      "cohort_index": 0,
      "cohort_key": {
        "profile_ref": {
          "id": "pooled_1h_control",
          "version": 4,
          "content_hash": "blake3:5ead2ec431de352cce70974f7b86c33b6b4e2f5300e8c6a24e179db2285becd8"
        },
        "category": "politics",
        "horizon_secs": 86400,
        "entry_price_min": "0.01",
        "entry_price_max": "0.99",
        "cash_budget_tier": "250",
        "liquidity": {
          "methodology_id": "fixture-v1",
          "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "bucket_id": "fixture"
        },
        "volatility": {
          "methodology_id": "fixture-v1",
          "methodology_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000",
          "bucket_id": "fixture"
        }
      }
    },
    "entry": {
      "condition": {
        "kind": "immediate"
      },
      "order_policy": {
        "kind": "passive",
        "limit_price": "0.43",
        "post_only": true
      },
      "max_slippage_bps": "50",
      "valid_from": "2023-11-14T22:13:20Z",
      "valid_until": "2023-11-14T23:13:20Z",
      "min_depth_usd": "100",
      "max_book_age_ms": 2000,
      "cancel_if_not_triggered": true,
      "entry_reason": "limit entry at edge"
    },
    "sizing": {
      "economic_tier_id": "c41cf043-099a-5ad9-ba89-8d152d27b9e8",
      "suggested_usd": "250",
      "suggested_shares": "500",
      "entry_vwap": "0.43",
      "portfolio_weight_pct": "0.05",
      "market_exposure_after_usd": "250",
      "event_exposure_after_usd": "250",
      "category_exposure_after_usd": "250",
      "route_exposure_after_usd": "250",
      "capital_occupancy_usd_hours": "12000",
      "sizing_reason": "selected executable tier from the exact global MILP"
    },
    "exit": {
      "take_profit_price": "0.7",
      "take_profit_pct": "0.6",
      "stop_loss_price": "0.3",
      "stop_loss_pct": "0.3",
      "time_exit_at": null,
      "max_hold_secs": 86400,
      "scale_out_targets": [
        {
          "target_id": "tp1",
          "trigger_price": "0.6",
          "target_cumulative_exit_pct": "0.5",
          "min_price": "0.55",
          "valid_after": null,
          "valid_until": null,
          "reason": "scale out at first target"
        }
      ],
      "trailing_stop": {
        "trail_bps": "300",
        "activation_price": "0.6"
      },
      "thesis_invalidation": {
        "min_score_retention": "0.6",
        "min_expected_return_bps": "0",
        "require_route_gate_eligibility": true
      },
      "opportunistic_exit": {
        "min_confidence": "0.65",
        "min_expected_alpha_bps": "50",
        "min_p_exit_better": "0.5",
        "max_cumulative_exit_pct": "1",
        "min_incremental_exit_pct": "0.1"
      },
      "settlement_mode": "hold_to_resolution",
      "redeem_policy": "manual",
      "manual_review_at": null,
      "exit_reason": "tp/sl + scaled partial exit"
    },
    "risk_envelope": {
      "max_loss_usd": "120",
      "max_slippage_bps": "50",
      "max_position_usd": "500",
      "max_market_exposure_usd": "500",
      "max_event_exposure_usd": "750",
      "max_category_exposure_usd": "1500",
      "max_route_exposure_usd": "1500",
      "cvar_contribution_usd": "40",
      "portfolio_cvar_cap_usd": "500",
      "maximum_scenario_loss_cap_usd": "750",
      "requires_approval": true,
      "auto_execution_allowed": false,
      "risk_notes": [
        "thin book"
      ],
      "envelope_hash": "blake3:0000000000000000000000000000000000000000000000000000000000000000"
    }
  },
  "factor_breakdown": [
    {
      "factor_name": "liquidity_depth",
      "family": "liquidity",
      "value_state": "scored",
      "raw_value": "1234.5",
      "normalized_score": "0.8",
      "normalization_source": "cross_section",
      "indeterminate_reason": null,
      "weight": "0.4",
      "contribution": "0.32",
      "confidence": "0.75",
      "direction": "positive",
      "explanation": "deep book",
      "source_refs": [
        "feature:liquidity_depth"
      ]
    }
  ],
  "execution_eligibility": {
    "eligible_modes": [
      "report_only"
    ],
    "ineligibility_reasons": [
      "report_only_mode"
    ],
    "approval_required": true,
    "auto_policy_id": null
  },
  "valid_from": "2023-11-14T22:13:20Z",
  "valid_until": "2023-11-15T22:13:20Z",
  "status": "published",
  "created_at": "2023-11-14T22:13:20Z",
  "report_status": "published",
  "active_order_intent_id": null
}
